--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,28 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+import Welcome from '../components/Welcome.astro';
+import Me from '../components/Me.astro';
+import Goof from '../components/Goof.astro';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const commonClasses = "main-section contents"
 ---
 
 <Layout>
-	<Welcome />
+	<section class={commonClasses} id="0"><Welcome /></section>
+	<section class={commonClasses} id="1"><Me /></section>
+	<section class={commonClasses} id="2"><Goof /></section>
 </Layout>
+
+<script>
+  import { pageIndex, sectionCount } from '../store.js';
+  const mainSections = document.querySelectorAll('.main-section')
+  
+  sectionCount.set(mainSections.length)
+  
+  pageIndex.subscribe(value => {
+    mainSections.forEach(section => {
+      section.classList.toggle("hidden", value !== +section.id)
+    })
+  })
+
+</script>
