--- a/src/components/atoms/Pacman.astro
+++ b/src/components/atoms/Pacman.astro
@@ -2,5 +2,5 @@
     id="pacman" 
     class="group block w-[120px] h-[120px] rounded-full absolute left-0 bottom-0 -rotate-45 -translate-x-1/4 translate-y-1/4 bg-[url('/src/assets/pacman.png')] bg-cover bg-center z-10"
     >
-    <span id="pacman-text" class="hidden rotate-45 group-hover:block absolute -right-10 -top-10 text-primary-black text-code-m">Click me pls</span>
+    <span id="pacman-text" class="opacity-0 rotate-45 font-family-vt323 group-hover:opacity-100 absolute -right-20 text-primary-black text-body-l duration-200">Click me pls</span>
 </button>
