delte unused heading classes

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -11,7 +11,7 @@ const WORLD = 'world'
 
 <div class="flex w-full h-full items-center justify-center relative overflow-hidden">
     <h1 class="sr-only">Daniel Jimenez Hernandez Portfolio</h1>
-    <h2 id="welcome-text" class="text-heading-1 uppercase font-family-epilogue text-center max-w-1/2 w-fit">
+    <h2 id="welcome-text" class="text-heading-1 uppercase font-family-epilogue text-center max-w-1/2">
         <p class="font-family-vt323 text-[8vw] text-left"> { SOFTWARE.split("").map(letter => <span>{letter}</span>) } </p>
         <p class="text-right">
             { IS.split("").map(letter => <span>{letter}</span>) }
