--- a/src/components/atoms/Toast.astro
+++ b/src/components/atoms/Toast.astro
@@ -3,6 +3,8 @@
 </div>
 
 <script>
+
+// We should think of opening this width other messages...
 import { isMaximized } from "../../store"
 
     const toast = document.getElementById('toast')
