--- a/src/components/atoms/QrCode.astro
+++ b/src/components/atoms/QrCode.astro
@@ -1,5 +1,6 @@
 ---
 import Image from "astro/components/Image.astro";
+import whatsappQr from "../../assets/whatsapp.jpeg";
 ---
 
-<Image src="/src/assets/whatsapp.jpeg" alt="QR Code" class="w-full aspect-square" width={100} height={100} />
+<Image src={whatsappQr} alt="QR Code" class="w-full aspect-square" width={550} height={548} quality={10} />
