update portfolio with project pages

--- a/src/components/views/Welcome.astro
+++ b/src/components/views/Welcome.astro
@@ -1,7 +1,7 @@
 ---
 import { Quote } from "@lucide/astro";
-import Pacman from "./atoms/Pacman.astro";
-import Controls from "./atoms/Controls.astro";
+import Pacman from "@atoms/Pacman.astro";
+import Controls from "@atoms/Controls.astro";
 const SOFTWARES_EATING_THE_WORLD_URL = "https://a16z.com/why-software-is-eating-the-world/";
 const SOFTWARE = 'software'
 const IS = 'is'
