upload projects page

--- a/src/components/atoms/Pacman.astro
+++ b/src/components/atoms/Pacman.astro
@@ -4,15 +4,15 @@
 
 <script>
 import { gameOn } from '../../store'
-import pacmanImage from '../../assets/sprites/pacman.png'
-import pacmanRightImage from '../../assets/sprites/pacman-right.png'
-import pacmanLeftImage from '../../assets/sprites/pacman-left.png'
-import pacmanUpImage from '../../assets/sprites/pacman-up.png'
-import pacmanDownImage from '../../assets/sprites/pacman-down.png'
-import pacmanRightUpImage from '../../assets/sprites/pacman-right-up.png'
-import pacmanRightDownImage from '../../assets/sprites/pacman-right-down.png'
-import pacmanLeftUpImage from '../../assets/sprites/pacman-left-up.png'
-import pacmanLeftDownImage from '../../assets/sprites/pacman-left-down.png'
+import pacmanImage from '../../assets/sprites/pacman.webp'
+import pacmanRightImage from '../../assets/sprites/pacman-right.webp'
+import pacmanLeftImage from '../../assets/sprites/pacman-left.webp'
+import pacmanUpImage from '../../assets/sprites/pacman-up.webp'
+import pacmanDownImage from '../../assets/sprites/pacman-down.webp'
+import pacmanRightUpImage from '../../assets/sprites/pacman-right-up.webp'
+import pacmanRightDownImage from '../../assets/sprites/pacman-right-down.webp'
+import pacmanLeftUpImage from '../../assets/sprites/pacman-left-up.webp'
+import pacmanLeftDownImage from '../../assets/sprites/pacman-left-down.webp'
 import explosionImage from '../../assets/explosion.webp'
     
     const pacman = document.getElementById('pacman')
