--- a/src/components/atoms/QrCode.astro
+++ b/src/components/atoms/QrCode.astro
@@ -1,6 +1,6 @@
 ---
 import Image from "astro/components/Image.astro";
-import whatsappQr from "../../assets/whatsapp.jpeg";
+import whatsappQr from "../../assets/whatsapp.webp";
 ---
 
 <Image src={whatsappQr} alt="QR Code" class="w-full aspect-square" width={550} height={548} quality={10} />
