--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
 import Image from "astro/components/Image.astro";
-import linkedinImage from "../assets/linkedin.jpeg";
+import linkedinImage from "../assets/linkedin.webp";
 ---
 
 <footer class="flex items-center gap-1 absolute bottom-6 right-6">
