--- a/src/components/atoms/Controls.astro
+++ b/src/components/atoms/Controls.astro
@@ -1,6 +1,6 @@
 ---
 import Image from "astro/components/Image.astro";
-import controlsImage from "../../assets/keys.png";
+import controlsImage from "../../assets/keys.webp";
 ---
 
 <div id="controls" class="flex flex-col items-center justify-center fixed top-10 left-10">
