--- a/src/components/views/Currently.astro
+++ b/src/components/views/Currently.astro
@@ -1,8 +1,8 @@
 ---
 import Slide from "@layouts/Slide.astro";
+import SlideHeader from "@atoms/SlideHeader.astro";
 ---
 
 <Slide>
-    <h2 class="text-heading-2 font-family-epilogue">Currently</h2>
-    <p class="text-body-xxxl font-family-dm">Product Lead @ Dcycle</p>
+    <SlideHeader title="Currently" subtitle="Product Lead @ Dcycle" />
 </Slide>
