--- a/src/components/views/Random.astro
+++ b/src/components/views/Random.astro
@@ -1,7 +1,8 @@
 ---
 import Slide from "@layouts/Slide.astro";
+import SlideHeader from "@atoms/SlideHeader.astro";
 ---
 
 <Slide>
-    <h2 class="text-heading-2 font-family-epilogue">Random</h2>
+    <SlideHeader title="Random" />
 </Slide>
