--- a/src/layouts/Slide.astro
+++ b/src/layouts/Slide.astro
@@ -1,5 +1,5 @@
-<section class="w-full h-full p-[100px]">
-    <div class="mx-auto flex flex-col gap-5">
+<section id="slide" class="w-full h-full max-sm:p-6 sm:p-[100px]">
+    <div class="mx-auto flex flex-col gap-5 max-sm:mt-20">
         <slot />
     </div>
 </section>
