--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,12 +11,12 @@ const commonClasses = "main-section contents"
 ---
 
 <Layout>
-  <section class={commonClasses} id="0"><Welcome /></section>
-  <section class={commonClasses} id="1"><Built /></section>
-	<section class={commonClasses} id="2"><Projects /></section>
-	<!-- <section class={commonClasses}id="3"><Currently /></section>
+  <section class={commonClasses} id="1"><Welcome /></section>
 	<section class={commonClasses} id="1"><Me /></section>
-	<section class={commonClasses} id="5"><Random /></section> -->
+  <section class={commonClasses} id="2"><Built /></section>
+	<section class={commonClasses} id="3"><Currently /></section>
+	<section class={commonClasses} id="4"><Projects /></section>
+	<section class={commonClasses} id="5"><Random /></section>
 </Layout>
 
 <script>
