--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import linkedinImage from "../assets/linkedin.webp";
 ---
 
 <footer class="flex items-center gap-1 absolute bottom-6 right-6">
-    <p class="text-secondary-grey text-body-s">© {new Date().getFullYear()} Made by <a class="inline-flex items-center gap-1 underline underline-offset-2" href="https://www.linkedin.com/in/dan-jimenez-dev" target="_blank" rel="noopener noreferrer"><span class="hover:text-primary-black">Daniel Jimenez</span>
+    <p class="text-secondary-grey max-sm:text-body-xs text-body-s">© {new Date().getFullYear()} Made by <a class="inline-flex items-center gap-1 underline underline-offset-2" href="https://www.linkedin.com/in/dan-jimenez-dev" target="_blank" rel="noopener noreferrer"><span class="hover:text-primary-black">Daniel Jimenez</span>
     <Image class="w-6 h-6 rounded-full" src={linkedinImage} alt="LinkedIn" width={710} height={710} quality={10} />
     </a></p>
 </footer>
