--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -4,20 +4,20 @@ import Button from "./atoms/Button.astro";
 import { ArrowLeft, ArrowRight, Maximize, Minimize } from "@lucide/astro";
 ---
 
-<div id="slider" class="border border-primary-grey px-5 py-4 rounded-3xl flex items-center justify-between absolute bottom-10 left-1/2 -translate-x-1/2 z-10 min-w-[500px] shadow-lg">
-    <div class="flex items-center gap-3">
-        <Button id="slider-button-left" icon={ArrowLeft} />
-        <div class="flex items-center gap-3">
-             <div id="dots-container" class="flex items-center gap-2">
+<div id="slider" class="border border-primary-grey max-sm:px-3 max-sm:py-2 px-5 py-4 max-sm:rounded-2xl rounded-3xl flex items-center justify-between absolute max-sm:top-6 sm:bottom-10 left-1/2 -translate-x-1/2 z-10 max-sm:w-[calc(100vw-96px)] w-[500px] shadow-lg">
+    <div class="flex items-center max-sm:gap-2 gap-3">
+        <Button id="slider-button-left" icon={ArrowLeft} size={14} />
+        <div class="flex items-center max-sm:gap-2 gap-3">
+             <div id="dots-container" class="flex items-center max-sm:gap-1 gap-2">
             </div>
         </div>
-        <Button id="slider-button-right" icon={ArrowRight} />
+        <Button id="slider-button-right" icon={ArrowRight} size={14} />
     </div>
     <Divider />
-    <div class="flex items-center gap-3">
-        <Button id="maximize-button" class="expand-button" icon={Maximize} />
-        <Button id="minimize-button" class="expand-button" icon={Minimize} />
-        <span class="text-secondary-grey inline-flex w-[4ch] text-right tabular-nums">
+    <div class="flex items-center max-sm:gap-2 gap-3">
+        <Button id="maximize-button" class="expand-button" icon={Maximize} size={14} />
+        <Button id="minimize-button" class="expand-button" icon={Minimize} size={14} />
+        <span class="text-secondary-grey inline-flex max-sm:text-body-xs text-body-s max-sm:w-[4ch] w-[4ch] text-right tabular-nums whitespace-nowrap flex-shrink-0">
             <span><span id="current-page-index"></span>
             <span>/</span>
             <span id="current-max-index"></span>
@@ -41,7 +41,7 @@ import { ArrowLeft, ArrowRight, Maximize, Minimize } from "@lucide/astro";
     function createDot(index: number) {
         const dot = document.createElement('button')
         dot.id = String(index)
-        dot.className = 'dot rounded-full w-3 h-3 data-[selected="true"]:bg-primary-black bg-secondary-grey'
+        dot.className = 'dot rounded-full max-sm:w-1.5 max-sm:h-1.5 w-3 h-3 data-[selected="true"]:bg-primary-black bg-secondary-grey'
         dot.setAttribute('data-selected', 'false')
         return dot
     }
