--- a/src/components/views/Built.astro
+++ b/src/components/views/Built.astro
@@ -1,5 +1,6 @@
 ---
 import Slide from "@layouts/Slide.astro";
+import SlideHeader from "@atoms/SlideHeader.astro";
 import { Image } from "astro:assets";
 import type { ImageMetadata } from "astro";
 
@@ -10,8 +11,7 @@ const logos = Object.values(
 
 
 <Slide>
-    <h2 class="text-heading-2 font-family-epilogue">Built</h2>
-    <p class="text-body-xxxl font-family-dm">Brands I've worked for</p>
+    <SlideHeader title="Built" subtitle="Brands I've worked for" />
     <div class="grid grid-cols-2 sm:grid-cols-4 place-items-center gap-6 sm:gap-8 max-h-[60vh] w-full mt-10 overflow-y-auto">
         {
 			logos.map((brand) => (
